# linac-seminararbeit

./: .gitignore  .run  .tmux-run  .tmux-sessionizer  README.md  pwm.sh  pyproject.toml
app/: control_modes.py  main.py  pwm.py  tests.py  voltage_control.py
backend/: _test.py  fastapi_utils.py  main.py  pwm.py  pyproject.toml  voltage_control.py
frontend/: bun.lockb  components.json  eslint.config.mjs  nuxt.config.ts
frontend/app/: app.vue
frontend/app/assets/css/: tailwind.css
frontend/app/components/ui/tabs/: TabsContent.vue
frontend/modules/: ws-fix.module.ts
nuxt/: bun.lockb  eslint.config.mjs  nuxt.config.ts  package.json  tailwind.config.mjs
nuxt/app/: app.vue
